--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@discordjs/voice": "^0.18.0",
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.0",
-    "libsodium-wrappers": "^0.7.15"
+    "libsodium-wrappers": "^0.7.15",
+    "youtube-dl-exec": "^3.0.22"
   }
 }
